# openmath

./: .gitignore  README.md  overview.md  package.json  pyproject.toml
apps/cli/: README.md
apps/gateway/: README.md
apps/web/: README.md  app.js  index.html  styles.css
docs/architecture/: bootstrap.md
docs/backends/: README.md
docs/protocol/: README.md
docs/ui/: README.md
examples/: README.md
openmath/: __init__.py  cli.py  settings.py
openmath/agents/: __init__.py  engines.py  providers.py  runtime.py
openmath/api/: __init__.py
openmath/api/http/: __init__.py  server.py
openmath/api/schemas/: __init__.py
openmath/backends/: __init__.py  detection.py
openmath/backends/adapter_api/: __init__.py
openmath/backends/aristotle/: __init__.py
openmath/backends/native/: __init__.py
openmath/backends/ulam/: __init__.py
openmath/coordinator/: __init__.py  chats.py  projects.py  runs.py
openmath/lab/: __init__.py
openmath/lean/: __init__.py
openmath/memory/: __init__.py  graph.py  sessions.py
openmath/prompts/: __init__.py
openmath/tools/: __init__.py
openmath/workspace/: __init__.py  layout.py  project.py  scaffold.py
tests/: test_agent_engines.py  test_agent_providers.py  test_agent_runtime.py  test_backend_detection.py  test_http_server.py  test_project_state.py  test_sessions.py  test_settings.py  test_workspace.py
