[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openmath"
version = "0.1.1"
description = "Self-contained mathematical research workbench bootstrap."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
openmath = "openmath.cli:main"

[tool.setuptools.packages.find]
include = ["openmath*"]
